navbar component, app link styles

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,10 @@
 .app.dark {
   --bg-color: #0c0b61;
+  --inverted-bg-color: #e4e4ff;
 
   --primary-color: #dfff95;
   --secondary-color: #ffdb78;
+
+  --inverted-primary-color: #123512;
+  --inverted-secondary-color: #1e1f52;
 }
