--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,10 @@
 .app.light {
   --bg-color: #e4e4ff;
+  --inverted-bg-color: #0c0b61;
 
   --primary-color: #123512;
   --secondary-color: #1e1f52;
+
+  --inverted-primary-color: #dfff95;
+  --inverted-secondary-color: #ffdb78;
 }
