--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -8,3 +8,10 @@
   background: none;
   outline: none;
 }
+
+.outlined {
+  padding: 10px 20px;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background: transparent;
+}
