--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .Button {
   cursor: pointer;
   color: inherit;
+  padding: 10px 20px;
 }
 
 .clear {
@@ -10,8 +11,50 @@
 }
 
 .outlined {
-  padding: 10px 20px;
   border: 1px solid var(--primary-color);
   color: var(--primary-color);
   background: transparent;
+}
+
+.background {
+  background: var(--bg-color);
+  color: var(--primary-color);
+  border: none;
+}
+
+.backgroundInverted {
+  background: var(--inverted-bg-color);
+  color: var(--inverted-primary-color);
+  border: none;
+}
+
+.size_m {
+  font: var(--font-m);
+}
+
+.size_l {
+  font: var(--font-l);
+}
+
+.size_xl {
+  font: var(--font-xl);
+}
+
+.squared {
+  padding: 0;
+}
+
+.squared.size_m {
+  width: var(--font-line-m);
+  height: var(--font-line-m);
+}
+
+.squared.size_l {
+  width: var(--font-line-l);
+  height: var(--font-line-l);
+}
+
+.squared.size_xl {
+  width: var(--font-line-xl);
+  height: var(--font-line-xl);
 }
